cabal-version:       2.4

name:                flat-instances
version:             0.1.0.0
license-file:        LICENSE

Flag flat-servant
  Description: Enable Flat serialization support
  Default:     True
  Manual:      False

library
  exposed-modules:
    Flat.Orphans
  build-depends:
    base,
    flat,
    time,
    vector
  if flag(flat-servant)
    exposed-modules:
      Flat.Servant
    build-depends:
      bytestring,
      servant

  hs-source-dirs:
    src
  default-language:
    Haskell2010
  -- default-extensions:
  --   DerivingVia
  --   StandaloneDeriving
  --   AllowAmbiguousTypes
  --   DeriveGeneric
  --   DerivingStrategies
  --   GeneralizedNewtypeDeriving
  --   PolyKinds
  --   RankNTypes
  --   RoleAnnotations
  --   ScopedTypeVariables
  --   TypeApplications
  --   TypeFamilies
